# 0.00.27 (70285) Nov 13, 2012
11/13/12 Deploying for review by design team.
2nd tab: Made Reset All turn off energy chunks.
# 0.00.26 (70283) Nov 13, 2012
11/13/12 Deploying for review by the design team.
2nd tab: Added Reset All functionality.
2nd tab: Made the beaker temperature reset when swapped out.
2nd tab: Moved the energy users left a bit to make room for expansion of the "Forms of Energy" panel when translated.
2nd tab: Made the energy chunks that go through the fluorescent light bulb transition directly from electrical to light (no thermal phase).
2nd tab: Made the thermal energy chunks spread out better on the filament in the incandescent light bulb.
2nd tab: Made the beaker temperature go up more rapidly and get closer to the boiling point.
2nd tab: Made the energy chunks radiated from the beaker be behind the front of the beaker but in front of the back of the beaker.
2nd tab: Made the energy chunks radiated from the beaker be fully opaque, rather than faded in some instance.
Made the representation of the thermal energy chunks have a black E rather than a white one.
2nd tab: Made the faucet knob larger.
# 0.00.25 (70147) Nov 9, 2012
11/9/12 Deploying to dev for review and feedback.
2nd tab: Made thermal energy chunks build up in light bulb before radiating as light energy.
2nd tab: Made energy chunks radiate from the beaker into the air.
2nd tab: Made it impossible to heat beaker to boiling point temperature.
2nd tab: Made energy chunks appear in the beaker on the burner.
2nd tab: Added the beaker and thermometer to the beaker heater.
2nd tab: Replaced heater element image with darker version.
2nd tab: Made the space around the sun be pre-populated with energy chunks when it is swapped in.
2nd tab: Made the water emerging from the faucet look more realistic.
# 0.00.24 (69581) Oct 26, 2012
10/26/12 Publishing to dev for review
2nd tab: Integrated an image of the biker looking tired that replaces the main body when the biker runs out of food.